# scaffold

./: .gitignore  README.md
Scaffold/: CMakeLists.txt  CMakeSettings.json
Scaffold/#in/Include/CppLog/: Logger.h
Scaffold/#in/Lib/Windows/x64-Debug/: CppLog.lib
Scaffold/#in/Lib/Windows/x64-Release/: CppLog.lib
Scaffold/#in/Lib/Windows/x86-Debug/: CppLog.lib
Scaffold/#in/Lib/Windows/x86-Release/: CppLog.lib
Scaffold/#wd/: renderlog.txt
Scaffold/Core/: CMakeLists.txt
Scaffold/Core/#buildsteps/: CopyHeaders.bat
Scaffold/Core/Core/: Scaffold.h
Scaffold/Core/Core/Dispatching/: Dispatching.cpp  Dispatching.h
Scaffold/Core/Core/Ecs/: EntityRegistry.h  SystemProto.cpp  SystemProto.h
Scaffold/Core/Core/Exceptions/: BaseException.h  GenericExceptions.h
Scaffold/Core/Core/InputSystem/: Input.cpp  Input.h  InputAction.cpp
Scaffold/Core/Core/Utils/: ArgProcessor.h  Math.cpp  StringUtils.h
Scaffold/Core/Core/Window/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Scaffold/Core/src/: Scaffold.cpp  StringUtils.cpp  StringUtils.h
Scaffold/Core/src/Debugging/: CPUProfiler.cpp  CPUProfiler.h
Scaffold/Core/src/Dispatching/: Dispatching.cpp
Scaffold/Core/src/Ecs/: EntityRegistry.cpp  SystemProto.cpp  SystemProto.h  SystemProtoFunctions.h
Scaffold/Core/src/InputSystem/: InputAction.h  InputDevice.cpp
Scaffold/Core/src/Utils/: ArgProcessor.cpp  Exceptions.h  Math.h
Scaffold/InputSystem/: CMakeLists.txt
Scaffold/InputSystem/src/: Input.cpp  Input.h  InputAction.cpp  InputAction.h  InputDevice.h  InputDrivers.cpp  InputDrivers.h  InputProcessor.h
Scaffold/MainTest/: CMakeLists.txt
Scaffold/MainTest/#buildsteps/: CopyBinaries.bat
Scaffold/MainTest/MainTest/: Main.cpp
Scaffold/MainTest/src/: Main.cpp
Scaffold/Renderer/: CMakeLists.txt
Scaffold/Renderer/Renderer/: Renderer.cpp  Renderer.h
Scaffold/Renderer/Renderer/Exceptions/: RenderingExceptions.h
Scaffold/Renderer/src/vulkan/: VulkanInit.h
Scaffold/Scaffold/: CMakeLists.txt
Scaffold/Scaffold/src/: Scaffold.cpp
Scaffold/Window/: CMakeLists.txt
Scaffold/Window/src/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
